테이블헤더의 약점속성 정렬

--- a/mhw/index.html
+++ b/mhw/index.html
@@ -127,16 +127,18 @@ function MHWController($scope, $http) {
             }
         })
 
+        var newKeys = []
         while (scores.length > 0) {
             var max = Math.max.apply(null, scores)
             var index = scores.indexOf(max)
+            newKeys.push($scope.keyssplice(index, 1)[0])
 
             scores.splice(index, 1)
             for (var i = 0; i < $scope.selMonsters.length; i++) {
                 newOrder[i].push(oldOrder[i].splice(index, 1)[0])
             }
         }
-
+        $scope.keys = newKeys
         $scope.selMonsters.forEach(function(monster) {
             monster.weakness = newOrder.shift()
         })
