--- a/mhw/index.html
+++ b/mhw/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>MHW</title>
+<meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.css">
 </head>
 <body ng-app="MHWApp" ng-controller="MHWController" ng-cloak>
