--- a/mhw/index.html
+++ b/mhw/index.html
@@ -55,7 +55,7 @@ angular.module('MHWApp', ['ngMaterial', 'ngMessages'])
 
 function MHWController($scope, $http) {
     $scope.keys = /*난이도그룹,이름,*/ '불,물,번개,얼음,용,독,수면,마비,폭파,기절' .split(',')
-    var rawdata = [
+    $scope.monsters = [
         '3,도스쟈그라스,3,0,2,2,1,3,3,3,3,3',
         '3,쿠루루야크,2,3,2,2,2,2,2,2,2,2',
         '3,푸케푸케,2,0,3,2,1,1,3,3,2,2',
@@ -87,9 +87,7 @@ function MHWController($scope, $http) {
         '9,키린,3,2,0,2,1,1,2,0,2,1',
         '9,조라-마그다라오스,0,3,1,2,3,0,0,0,0,0',
         '9,제노-지바,2,2,2,2,2,3,0,1,2,1',
-    ]
-
-    $scope.monsters = rawdata.map(function(data) {
+    ].map(function(data) {
         var weakness = data.split(',')
         return {
             diff: weakness[0],
