버튼으로 추가시, 정렬 메서드 호출

--- a/mhw/index.html
+++ b/mhw/index.html
@@ -116,6 +116,7 @@ function MHWController($scope, $http) {
     $scope.addMonster = function(monster) {
         if (!$scope.isSelectedMonster(monster)) {
             $scope.selMonsters.push(monster)
+            $scope.selMonstersChanged()
         }
     }
 
